@@ -1,0 +1,4 @@
+Copyright (C) 2003-2004 by the gtk2-perl team.
+
+This software is licensed under the LGPL.  See L<Gnome2::Rsvg> for a full
+notice.
