@@ -1,3 +1,9 @@
+2004/02/14 16:39 (+0100) kaffeetisch
+
+	A copyright.pod
+	* Makefile.PL: Switch to the new EU::Depends and ::PkgConfig
+	versions.
+
 2004/01/27 20:56 (+0100) kaffeetisch
 
 	* README
